# gst-cerevoice

./: .gitignore  COPYING  Makefile  README.md  gstcerevoice.c  meson.build  meson_options.txt
